fixing some minor warnings